Add ARActivity and any other required files related to ARActivity

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/wood"
     android:gravity="center_horizontal"
     android:padding="10dp"
-    tools:context="com.example.timotiusek.runcompanionvr.HomeActivity"
+    tools:context="com.example.timotiusek.runcompanionvr.Activity.HomeActivity"
     android:orientation="vertical">
 
     <TextView
